fix: treat api as a package
