# apps/api/api.yaml
@@ -145,9 +145,8 @@ components:
           type: string
           description: The new title of the todo item
           minLength: 5
-        completed:
-          type: boolean
-          description: Whether the todo item is completed or not
+      required:
+        - title
           
     TodoError:
       type: object
